--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,9 +4,12 @@ $headerBG: #9c29b2;
 
 $heroBG: #ffc909;
 $burgerMenuBG: #ffc909;
+$navLinkHoverMobile: #fff;
+$navLinkColorMobile: #710a85;
+$navLinkHover: #ffc909;
+$navLinkColor: #fff;
+$navMobileAccent: #fff;
 
-$navMobileAccent:#710a85;
-$navAccent:#ffc909;
 $textWhite: #fff;
 $textpurple: #710a85;
 $titleColor: #2e0336;
