--- a/src/assets/scss/common/_title.scss
+++ b/src/assets/scss/common/_title.scss
@@ -1,17 +1,18 @@
 //commpon
 .title {
-  width: 100%;
-  font-family: 'Lora', serif;
-  font-weight: 500;
-  font-size: 16px;
+ color: titleColor;
+text-align: center;
 
-  text-align: center;
-  color: $titleColor;
+font-size: 24px;
+font-style: normal;
+
+line-height: normal;
+letter-spacing: 1.08px;
 
   @media screen and (min-width: 768px) {
-    font-size: 24px;
+    font-size: 32px;
   }
   @media screen and (min-width: 1240px) {
-    font-size: 32px;
+    font-size: 36px;
   }
 }
