--- a/src/components/nav/Navigation.module.scss
+++ b/src/components/nav/Navigation.module.scss
@@ -11,18 +11,24 @@
   padding: 24px 0;
 
   li {
+    color: $navLinkColorMobile;
     font-size: 18px;
   }
   li:hover {
-    color: $navMobileAccent;
+    color: $navLinkHoverMobile;
+  }
+
+  @include tablet {
+    font-size: 20px;
   }
   @include desktop {
     flex-direction: row;
     li {
+      color: $navLinkColor;
       font-size: 24px;
     }
     li:hover {
-      color: $navAccent;
+      color: $navLinkHover;
     }
   }
 }
