feat(burger menu): add close on nav menu item click

--- a/src/components/main/header/Header.module.scss
+++ b/src/components/main/header/Header.module.scss
@@ -1,5 +1,9 @@
 .header {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9998;
   background-color: $headerBG;
   color: $textWhite;
   font-family: 'ComicBold';
