--- a/src/components/main/ourKids/OurKids.module.scss
+++ b/src/components/main/ourKids/OurKids.module.scss
@@ -4,11 +4,21 @@
 }
 .contentWrapper {
   outline: 2px solid blue;
+  @extend%aligncenter;
+  flex-direction: column;
+  gap: 10px;
   padding: 20px 0;
   @include tablet {
     padding: 40px 0;
   }
   @include desktop {
     padding: 60px 0;
+  }
+}
+.kidsList {
+  @extend%aligncenter;
+  gap: 10px;
+  li img {
+    border-radius: 8px;
   }
 }
