--- a/src/components/main/ourKids/OurKids.module.scss
+++ b/src/components/main/ourKids/OurKids.module.scss
@@ -24,3 +24,38 @@
     border-radius: 8px;
   }
 }
+.cardFront {
+  width: 100%;
+  height: 100%;
+  @extend%aligncenter;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 5px;
+  padding: 15px;
+  color: $textWhite;
+  font-size: 24px;
+  letter-spacing: 0.42px;
+  .info {
+    width: 100%;
+    height: 100%;
+    @extend%aligncenter;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  img {
+    width: 100%;
+    height: 192px;
+    object-fit: cover;
+    object-position: top;
+    border-radius: 8px;
+  }
+}
+.cardBack {
+  width: 100%;
+  height: 100%;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
