--- a/src/components/main/header/Header.module.scss
+++ b/src/components/main/header/Header.module.scss
@@ -35,7 +35,7 @@
   }
 }
 
-.contentWrapper {
+.header_contentWrapper {
   padding: 10px;
   @extend%aligncenter;
   justify-content: space-between;
