--- a/src/components/main/ourKids/OurKids.module.scss
+++ b/src/components/main/ourKids/OurKids.module.scss
@@ -37,14 +37,49 @@
   letter-spacing: 0.42px;
   .info {
     width: 100%;
-    height: 100%;
+
+    padding: 5px;
+
     @extend%aligncenter;
     flex-direction: column;
     justify-content: space-evenly;
+    font-size: 14px;
+    letter-spacing: 0.42px;
+
+    .hobby {
+      width: 265px;
+      height: 80px;
+      overflow-y: auto;
+      text-align: center;
+      overflow-wrap: break-word;
+      &::-webkit-scrollbar {
+        width: 0.8rem;
+      }
+      &::-webkit-scrollbar-track {
+        background-color: $scroll;
+        border-radius: 8px;
+        margin-bottom: 0.5rem;
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: $scrollBG;
+        border-radius: 0.3rem;
+        border: 1px solid $scrollBG;
+        height: 0.5rem;
+        cursor: pointer;
+      }
+      &::-webkit-scrollbar-thumb:hover {
+        background-color: $scrollBGHover;
+        border: 1px solid $scrollBGHover;
+        cursor: pointer;
+      }
+    }
+    .name {
+      font-size: 24px;
+    }
   }
   img {
     width: 100%;
-    height: 192px;
+    height: 235px;
     object-fit: cover;
     object-position: top;
     border-radius: 8px;
