--- a/src/index.scss
+++ b/src/index.scss
@@ -49,6 +49,7 @@ main {
   align-items: center;
   flex-direction: column;
   margin-top: 83px;
+  scroll-margin: 65px;
   @include tablet {
     margin-top: 75px;
   }
