feat(scss): add commot scss wrapper

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -3,4 +3,4 @@
 @import '_placeholders';
 @import './common/visuallyHidden';
 @import './common/title';
-@import './common/_contentWrapper';
+@import './common/contentWrapper';
