--- a/src/components/main/ourKids/OurKids.module.scss
+++ b/src/components/main/ourKids/OurKids.module.scss
@@ -37,9 +37,7 @@
   letter-spacing: 0.42px;
   .info {
     width: 100%;
-
     padding: 5px;
-
     @extend%aligncenter;
     flex-direction: column;
     justify-content: space-evenly;
@@ -89,6 +87,7 @@
   width: 100%;
   height: 100%;
   img {
+    z-index: 10;
     width: 100%;
     height: 100%;
     object-fit: cover;
