fix(scroll bar safary): add z index

--- a/src/components/main/ourKids/OurKids.module.scss
+++ b/src/components/main/ourKids/OurKids.module.scss
@@ -51,6 +51,7 @@
       text-align: center;
       overflow-wrap: break-word;
       &::-webkit-scrollbar {
+        z-index: 0;
         width: 0.8rem;
       }
       &::-webkit-scrollbar-track {
