--- a/src/index.scss
+++ b/src/index.scss
@@ -49,7 +49,7 @@ main {
   align-items: center;
   flex-direction: column;
   margin-top: 83px;
-  scroll-margin: 65px;
+
   @include tablet {
     margin-top: 75px;
   }
@@ -105,4 +105,25 @@ img {
 input,
 textarea {
   outline: none;
+}
+
+::-webkit-scrollbar {
+  width: 0.8rem;
+}
+::-webkit-scrollbar-track {
+  background-color: $scroll;
+  border-radius: 8px;
+  margin-bottom: 0.5rem;
+}
+::-webkit-scrollbar-thumb {
+  background-color: $scrollBG;
+  border-radius: 0.3rem;
+  border: 1px solid $scrollBG;
+  height: 0.5rem;
+  cursor: pointer;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: $scrollBGHover;
+  border: 1px solid $scrollBGHover;
+  cursor: pointer;
 }
