feat(add gallery): add gallery

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 $accent: #710a85;
 
 $headerBG: #9c29b2;
-
+$kidsBG: #fff0e5;
 $heroBG: #ffc909;
 $galleryBG: #ffe7c0;
 $galleryGradient: linear-gradient(
