feat(gallery): add gallery

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -9,6 +9,7 @@ $galleryGradient: linear-gradient(
   rgba(255, 240, 229, 1) 57%,
   rgba(255, 231, 192, 1) 100%
 );
+$SchedulCardBG: #e8cded;
 
 $burgerMenuBG: #ffc909;
 $navLinkHoverMobile: #fff;
