--- a/src/components/main/schedule/Schedule.module.scss
+++ b/src/components/main/schedule/Schedule.module.scss
@@ -49,4 +49,24 @@
 }
 .innerWrapper {
   padding: 10px 0 10px 0;
+  @extend%aligncenter;
+  flex-direction: column;
+  gap: 10px;
+  .schedule {
+    width: 100%;
+    @extend%aligncenter;
+    flex-wrap: wrap;
+    gap: 10px;
+    .scheduleCard {
+      width: 300px;
+      height: 250px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      padding: 20px;
+      border-radius: 40px;
+      background-color: $SchedulCardBG;
+    }
+  }
 }
