feat(add close icon to mobile): add close icon to gallary

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,6 +4,7 @@ $headerBG: #9c29b2;
 $kidsBG: #fff0e5;
 $heroBG: #ffc909;
 $galleryBG: #ffe7c0;
+$buttonBG: #ffc909;
 $galleryGradient: linear-gradient(
   183deg,
   rgba(255, 240, 229, 1) 57%,
@@ -20,6 +21,7 @@ $navMobileAccent: #fff;
 
 $textWhite: #fff;
 $textpurple: #710a85;
+$textPurple: #710a85;
 $titleColor: #2e0336;
 $white: #fff;
 
