--- a/src/components/main/gallery/Gallery.module.scss
+++ b/src/components/main/gallery/Gallery.module.scss
@@ -21,14 +21,26 @@
   .shapeTop .shapeFill {
     fill: #ffffff;
   }
+
+  .icon1 {
+    position: absolute;
+    top: 10px;
+    left: 15px;
+  }
+  .icon2 {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+  }
 }
 .imageGrid {
   width: 100%;
+  height: 800px;
   display: grid;
   grid-gap: 10px;
 
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  grid-auto-rows: minmax(50px, auto);
+  grid-auto-rows: minmax(100px, auto);
 
   .imageGridItem {
     display: block;
@@ -38,6 +50,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      object-position: center;
       border-radius: 8px;
     }
   }
