--- a/src/components/main/schedule/Schedule.module.scss
+++ b/src/components/main/schedule/Schedule.module.scss
@@ -48,10 +48,11 @@
   }
 }
 .innerWrapper {
-  padding: 10px 0 10px 0;
+  position: relative;
+  padding: 50px 0 50px 0;
   @extend%aligncenter;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
   .schedule {
     width: 100%;
     @extend%aligncenter;
@@ -68,5 +69,18 @@
       border-radius: 40px;
       background-color: $SchedulCardBG;
     }
+  }
+
+  .icon1 {
+    position: absolute;
+    top: 10px;
+    left: 15px;
+    transform: rotate(-20deg);
+  }
+  .icon2 {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    transform: rotate(20deg);
   }
 }
