--- a/src/pages/galleryPage/GalleryPage.module.scss
+++ b/src/pages/galleryPage/GalleryPage.module.scss
@@ -1,4 +1,9 @@
+.gallery {
+  width: 100%;
+  background: $galleryBG;
+}
 .imageGrid {
+  padding-top: 50px;
   width: 100%;
   display: grid;
   grid-gap: 10px;
@@ -24,6 +29,7 @@
 
   @include tablet {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-auto-rows: minmax(250px, auto);
   }
   @include desktop {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
