--- a/src/index.scss
+++ b/src/index.scss
@@ -1,18 +1,3 @@
-// @font-face {
-//   font-family: 'ComicBold';
-//   src: url('./fonts/Comic_Sans_MS_Bold.ttf') format('truetype');
-
-//   font-style: italic;
-//   font-display: swap;
-// }
-// @font-face {
-//   font-family: 'Comic';
-//   src: url('./fonts/Comic_Sans_MS.ttf') format('truetype');
-//   font-weight: 400; /* Adjust the font-weight accordingly */
-//   font-style: italic;
-//   font-display: swap;
-// }
-
 @font-face {
   font-family: 'ComicBold';
   src: url('./fonts/Comic_Sans_MS_Bold.ttf') format('truetype');
@@ -107,23 +92,23 @@ textarea {
   outline: none;
 }
 
-// ::-webkit-scrollbar {
-//   width: 0.8rem;
-// }
-// ::-webkit-scrollbar-track {
-//   background-color: $scroll;
-//   border-radius: 8px;
-//   margin-bottom: 0.5rem;
-// }
-// ::-webkit-scrollbar-thumb {
-//   background-color: $scrollBG;
-//   border-radius: 0.3rem;
-//   border: 1px solid $scrollBG;
-//   height: 0.5rem;
-//   cursor: pointer;
-// }
-// ::-webkit-scrollbar-thumb:hover {
-//   background-color: $scrollBGHover;
-//   border: 1px solid $scrollBGHover;
-//   cursor: pointer;
-// }
+  ::-webkit-scrollbar {
+    width: 0.8rem;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: $scroll;
+    border-radius: 8px;
+    margin-bottom: 0.5rem;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: $scrollBG;
+    border-radius: 0.3rem;
+    border: 1px solid $scrollBG;
+    height: 0.5rem;
+    cursor: pointer;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: $scrollBGHover;
+    border: 1px solid $scrollBGHover;
+    cursor: pointer;
+  }
