--- a/src/components/main/ourKids/OurKids.module.scss
+++ b/src/components/main/ourKids/OurKids.module.scss
@@ -51,7 +51,9 @@
       overflow-y: auto;
       overflow-wrap: break-word;
     }
-
+    .hobby.flipped {
+      display: none;
+    }
     .name {
       font-size: 24px;
     }
@@ -65,9 +67,6 @@
   }
 }
 
-.cardFront.flipped {
-  display: none;
-}
 .cardBack {
   background: #fff;
   width: 100%;
