--- a/src/components/main/schedule/Schedule.module.scss
+++ b/src/components/main/schedule/Schedule.module.scss
@@ -54,20 +54,24 @@
   flex-direction: column;
   gap: 20px;
   .schedule {
-    width: 100%;
-    @extend%aligncenter;
-    flex-wrap: wrap;
-    gap: 10px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    gap: 10px 10px;
+
     .scheduleCard {
-      width: 300px;
-      height: 250px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: space-around;
+
       padding: 20px;
       border-radius: 40px;
       background-color: $SchedulCardBG;
+    }
+
+    @include tablet {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
     }
   }
 
@@ -82,5 +86,21 @@
     top: 10px;
     right: 15px;
     transform: rotate(20deg);
+  }
+}
+
+.scheduleList {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  .scheduleListItem {
+    width: 100%;
+    @extend%aligncenter;
+    justify-content: flex-start;
+    gap: 5px;
   }
 }
