feat(add study section): add study section teachrs section

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -10,8 +10,10 @@ $galleryGradient: linear-gradient(
   rgba(255, 240, 229, 1) 57%,
   rgba(255, 231, 192, 1) 100%
 );
+$studyBG: #710a85;
 $SchedulCardBG: #e8cded;
-
+$schedulBG: #2e0336;
+$teachersBG: linear-gradient(180deg, #ffe7c0 10%, #e8cded 100%);
 $burgerMenuBG: #ffc909;
 $navLinkHoverMobile: #fff;
 $navLinkColorMobile: #710a85;
