--- a/src/components/main/schedule/Schedule.module.scss
+++ b/src/components/main/schedule/Schedule.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   //   border-radius: 30px 0 30px 0;
-  background-color: #2e0336;
+  background-color: $schedulBG;
   h2 {
     color: $textWhite;
   }
@@ -102,5 +102,9 @@
     @extend%aligncenter;
     justify-content: flex-start;
     gap: 5px;
+
+    @include tablet {
+      font-size: 20px;
+    }
   }
 }
