--- a/src/components/main/teachers/Teachers.module.scss
+++ b/src/components/main/teachers/Teachers.module.scss
@@ -4,3 +4,28 @@
   min-height: 300px;
   background: $teachersBG;
 }
+.teachersList {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+
+  @include tablet {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .teachersListItem {
+    background-color: white;
+    border-radius: 30px;
+    padding: 20px;
+
+    .info {
+      @extend%aligncenter;
+      flex-direction: column;
+      gap: 10px;
+      font-family: 'ComicBold';
+      color: $textPurple;
+      font-size: 20px;
+      border-radius: 30px;
+      overflow: hidden;
+    }
+  }
+}
