--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -3,8 +3,8 @@
   font-weight: $weight;
   line-height: $height;
 }
-@mixin phone {
-  @media screen and (min-width: 320px) {
+@mixin mobile {
+  @media screen and (max-width: 768px) {
     @content;
   }
 }
