--- a/src/components/main/gallery/Gallery.module.scss
+++ b/src/components/main/gallery/Gallery.module.scss
@@ -35,12 +35,10 @@
 }
 .imageGrid {
   width: 100%;
-  height: 800px;
   display: grid;
   grid-gap: 10px;
 
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  grid-auto-rows: minmax(100px, auto);
+  grid-template-columns: repeat(2, 1fr);
 
   .imageGridItem {
     display: block;
@@ -48,22 +46,28 @@
     img {
       display: flex;
       width: 100%;
-      height: 100%;
+      height: 200px;
       object-fit: cover;
       object-position: center;
       border-radius: 8px;
     }
   }
 
-  .imageGridItem:nth-child(5n) {
-    grid-column-end: span 2;
+  @include mobile {
+    .imageGridItem:nth-child(5n) {
+      grid-column-end: span 2;
+    }
   }
 
   @include tablet {
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
   }
+
   @include desktop {
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(5, 1fr);
+    .imageGridItem:nth-child(3n) {
+      grid-column-end: span 2;
+    }
   }
 }
 .link {
