--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -9,7 +9,7 @@
   }
 }
 @mixin tablet {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-device-width: 768px) and (max-device-width: 1240px) {
     @content;
   }
 }
