--- a/src/pages/galleryPage/GalleryPage.module.scss
+++ b/src/pages/galleryPage/GalleryPage.module.scss
@@ -3,13 +3,11 @@
   background: $galleryBG;
 }
 .imageGrid {
-  padding-top: 50px;
   width: 100%;
   display: grid;
   grid-gap: 10px;
-  //grid-template-columns: repeat(4fr);
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  grid-auto-rows: minmax(50px, auto);
+
+  grid-template-columns: repeat(2, 1fr);
 
   .imageGridItem {
     display: block;
@@ -17,21 +15,30 @@
     img {
       display: flex;
       width: 100%;
-      height: 100%;
+      height: 200px;
       object-fit: cover;
+      object-position: center;
       border-radius: 8px;
     }
   }
 
-  .imageGridItem:nth-child(5n) {
-    grid-column-end: span 2;
+  @include mobile {
+    .imageGridItem:nth-child(5n) {
+      grid-column-end: span 2;
+    }
   }
 
   @include tablet {
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-auto-rows: minmax(250px, auto);
+    grid-template-columns: repeat(4, 1fr);
+    .imageGridItem:nth-child(5n) {
+      grid-column-end: span 2;
+    }
   }
+
   @include desktop {
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(5, 1fr);
+    .imageGridItem:nth-child(3n) {
+      grid-column-end: span 2;
+    }
   }
 }
