feat(add swiper): add swiper with markdown

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -15,6 +15,7 @@ $SchedulCardBG: #e8cded;
 $schedulBG: #2e0336;
 $teachersBG: linear-gradient(180deg, #ffe7c0 10%, #e8cded 100%);
 $burgerMenuBG: #ffc909;
+
 $navLinkHoverMobile: #fff;
 $navLinkColorMobile: #710a85;
 $navLinkHover: #ffc909;
@@ -30,3 +31,6 @@ $white: #fff;
 $scroll: #ffc909;
 $scrollBG: #9c29b2;
 $scrollBGHover: #fff;
+
+$swiperButtonsBG: #ffc909;
+$swiperButtonsBGHover: fff;
