--- a/src/components/main/gallery/Gallery.module.scss
+++ b/src/components/main/gallery/Gallery.module.scss
@@ -2,6 +2,7 @@
   width: 100%;
   background: $galleryBG;
   position: relative;
+  scroll-margin: 130px;
   .shapeTop {
     position: absolute;
     top: 0;
