--- a/src/components/main/ourKids/OurKids.module.scss
+++ b/src/components/main/ourKids/OurKids.module.scss
@@ -1,6 +1,7 @@
 .ourKids {
   width: 100%;
   background: linear-gradient(180deg, #fff 0%, #fff0e5 100%);
+    scroll-margin: 130px;
 }
 .contentWrapper {
   outline: 2px solid blue;
