--- a/src/components/main/schedule/Schedule.module.scss
+++ b/src/components/main/schedule/Schedule.module.scss
@@ -3,6 +3,7 @@
   width: 100%;
   //   border-radius: 30px 0 30px 0;
   background-color: $schedulBG;
+    scroll-margin: 130px;
   h2 {
     color: $textWhite;
   }
@@ -70,8 +71,10 @@
     }
 
     @include tablet {
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @include desktop {
+      grid-template-columns: repeat(3, 1fr);
     }
   }
 
