--- a/src/components/main/teachers/Teachers.module.scss
+++ b/src/components/main/teachers/Teachers.module.scss
@@ -3,6 +3,7 @@
   width: 100%;
   min-height: 300px;
   background: $teachersBG;
+    scroll-margin: 130px;
 }
 .teachersList {
   display: grid;
@@ -10,21 +11,26 @@
   gap: 10px;
 
   @include tablet {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @include desktop {
+    grid-template-columns: repeat(3, 1fr);
   }
   .teachersListItem {
     background-color: white;
     border-radius: 30px;
-    padding: 20px;
+    padding: 10px;
+    border-radius: 30px;
 
     .info {
       @extend%aligncenter;
       flex-direction: column;
       gap: 10px;
+      padding: 10px;
       font-family: 'ComicBold';
       color: $textPurple;
       font-size: 20px;
-      border-radius: 30px;
+
       overflow: hidden;
     }
   }
