--- a/src/index.scss
+++ b/src/index.scss
@@ -33,7 +33,7 @@ main {
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  margin-top: 83px;
+  margin-top: 130px;
 
   @include tablet {
     margin-top: 75px;
@@ -92,23 +92,27 @@ textarea {
   outline: none;
 }
 
-  ::-webkit-scrollbar {
-    width: 0.8rem;
-  }
-  ::-webkit-scrollbar-track {
-    background-color: $scroll;
-    border-radius: 8px;
-    margin-bottom: 0.5rem;
-  }
-  ::-webkit-scrollbar-thumb {
-    background-color: $scrollBG;
-    border-radius: 0.3rem;
-    border: 1px solid $scrollBG;
-    height: 0.5rem;
-    cursor: pointer;
-  }
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: $scrollBGHover;
-    border: 1px solid $scrollBGHover;
-    cursor: pointer;
-  }
+::-webkit-scrollbar {
+  width: 0.8rem;
+}
+::-webkit-scrollbar-track {
+  background-color: $scroll;
+  border-radius: 8px;
+  margin-bottom: 0.5rem;
+}
+::-webkit-scrollbar-thumb {
+  background-color: $scrollBG;
+  border-radius: 0.3rem;
+  border: 1px solid $scrollBG;
+  height: 0.5rem;
+  cursor: pointer;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: $scrollBGHover;
+  border: 1px solid $scrollBGHover;
+  cursor: pointer;
+}
+
+.swiper-slide-shadow-coverflow {
+  border-radius: 20px;
+}
