--- a/src/components/main/header/nav/Navigation.module.scss
+++ b/src/components/main/header/nav/Navigation.module.scss
@@ -32,3 +32,19 @@
     }
   }
 }
+.navFooter {
+  height: 100%;
+
+  ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 5px;
+    column-gap: 7px;
+    padding: 0;
+
+    li {
+      color: $textWhite;
+      font-size: 16px;
+    }
+  }
+}
