--- a/src/components/main/footer/Footer.module.scss
+++ b/src/components/main/footer/Footer.module.scss
@@ -5,15 +5,33 @@
 }
 .footer_contentWrapper {
   display: grid;
-  grid-template-columns: 20% 40% 40%;
-  padding: 30px 0;
+  grid-template-columns: 15% 42.5% 42.5%;
+  padding: 20px 0;
+  gap: 10px;
 }
 .address {
   font-family: 'Comic';
   font-style: normal;
-  font-size: 24px;
+  font-size: 14px;
   color: $textWhite;
   p {
-    font-size: 14px;
+    font-size: 10px;
   }
+  @include tablet {
+    font-size: 18px;
+    p {
+      font-size: 14px;
+    }
+  }
+  @include desktop {
+    font-size: 24px;
+    p {
+      font-size: 16px;
+    }
+  }
+}
+.developer {
+  display: block;
+  text-align: center;
+  font-size: 10px;
 }
