--- a/src/components/main/schedule/Schedule.module.scss
+++ b/src/components/main/schedule/Schedule.module.scss
@@ -3,7 +3,7 @@
   width: 100%;
   //   border-radius: 30px 0 30px 0;
   background-color: $schedulBG;
-    scroll-margin: 130px;
+  scroll-margin: 130px;
   h2 {
     color: $textWhite;
   }
@@ -105,7 +105,9 @@
     @extend%aligncenter;
     justify-content: flex-start;
     gap: 5px;
-
+    p {
+      width: 90%;
+    }
     @include tablet {
       font-size: 20px;
     }
