--- a/src/components/ui/nav/Navigation.module.scss
+++ b/src/components/ui/nav/Navigation.module.scss
@@ -1,6 +1,7 @@
 .nav {
   width: 100%;
   height: 50%;
+  cursor: pointer;
 }
 .navList {
   width: 100%;
@@ -19,7 +20,9 @@
   }
 
   @include tablet {
-    font-size: 20px;
+    li {
+      font-size: 20px;
+    }
   }
   @include desktop {
     flex-direction: row;
@@ -37,14 +40,26 @@
 
   ul {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     row-gap: 5px;
     column-gap: 7px;
     padding: 0;
-
     li {
       color: $textWhite;
-      font-size: 16px;
+      font-size: 12px;
+    }
+
+    @include tablet {
+      grid-template-columns: repeat(2, 1fr);
+      li {
+        font-size: 18px;
+      }
+    }
+    @include desktop {
+      grid-template-columns: repeat(2, 1fr);
+      li {
+        font-size: 24px;
+      }
     }
   }
 }
