--- a/src/index.scss
+++ b/src/index.scss
@@ -33,7 +33,7 @@ main {
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  margin-top: 130px;
+  margin-top: 78px;
 
   @include tablet {
     margin-top: 75px;
@@ -69,6 +69,7 @@ ul {
 a {
   color: currentColor;
   text-decoration: none;
+  cursor: pointer;
 }
 
 button {
