--- a/src/components/main/header/Header.module.scss
+++ b/src/components/main/header/Header.module.scss
@@ -1,4 +1,5 @@
 .header {
+  max-width: 100vw;
   position: fixed;
   top: 0;
   left: 0;
@@ -23,10 +24,10 @@
       height: 112px;
       background: url('../../../../public/images/header_bottomDesktop.png');
       position: absolute;
-      bottom: -112px;
+      bottom: -110px;
     }
   }
-  @include tablet {
+  @include desktop {
     &::after {
       height: 137px;
       background: url('../../../../public/images/header_bottomDesktop.png');
