--- a/src/index.scss
+++ b/src/index.scss
@@ -17,28 +17,26 @@
 }
 
 body {
+  min-height: 100vh;
   min-width: 320px;
-  max-width: 1240px;
   font-family: 'Comic';
   font-size: 18px;
-  // overflow-x: hidden;
+  overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 main {
+  width: 100%;
   display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   justify-content: flex-start;
   align-items: center;
-  flex-direction: column;
+  overflow-y: auto;
   margin-top: 78px;
 
   @include tablet {
     margin-top: 75px;
   }
-}
-
-header,
-footer {
-  width: 99vw;
 }
 
 h1,
@@ -89,27 +87,27 @@ textarea {
   outline: none;
 }
 
-// ::-webkit-scrollbar {
-//   width: 0.8rem;
-// }
-// ::-webkit-scrollbar-track {
-//   background-color: $scroll;
-//   border-radius: 8px;
-//   margin-bottom: 0.5rem;
-// }
-// ::-webkit-scrollbar-thumb {
-//   background-color: $scrollBG;
-//   border-radius: 0.3rem;
-//   border: 1px solid $scrollBG;
-//   height: 0.5rem;
-//   cursor: pointer;
-// }
-// ::-webkit-scrollbar-thumb:hover {
-//   background-color: $scrollBGHover;
-//   border: 1px solid $scrollBGHover;
-//   cursor: pointer;
-// }
+::-webkit-scrollbar {
+  width: 0.8rem;
+}
+::-webkit-scrollbar-track {
+  background-color: $scroll;
+  border-radius: 8px;
+  margin-bottom: 0.5rem;
+}
+::-webkit-scrollbar-thumb {
+  background-color: $scrollBG;
+  border-radius: 0.3rem;
+  border: 1px solid $scrollBG;
+  height: 0.5rem;
+  cursor: pointer;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: $scrollBGHover;
+  border: 1px solid $scrollBGHover;
+  cursor: pointer;
+}
 
-// .swiper-slide-shadow-coverflow {
-//   border-radius: 20px;
-// }
+.swiper-slide-shadow-coverflow {
+  border-radius: 20px;
+}
