--- a/src/components/main/footer/Footer.module.scss
+++ b/src/components/main/footer/Footer.module.scss
@@ -4,8 +4,9 @@
   background: $footerBG;
 }
 .footer_contentWrapper {
+  width: 100%;
   display: grid;
-  grid-template-columns: 15% 42.5% 42.5%;
+  grid-template-columns: 13% 42% 42%;
   padding: 20px 0;
   gap: 10px;
 }
