feat(our kids): add serch by name

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -35,3 +35,6 @@ $scrollBGHover: #fff;
 
 $swiperButtonsBG: #ffc909;
 $swiperButtonsBGHover: fff;
+
+$inputBorder: #9c29b2;
+$inputBorderFocus: #ffc909;
