--- a/src/components/main/ourKids/OurKids.module.scss
+++ b/src/components/main/ourKids/OurKids.module.scss
@@ -4,6 +4,21 @@
   scroll-margin: 130px;
 }
 
+.searchInput {
+  width: 65%;
+  height: 50px;
+  padding: 5px;
+  color: $textPurple;
+  font-family: inherit;
+  font-size: 18px;
+  border: 0;
+  border-bottom: 2px solid $inputBorder;
+  &:focus,
+  &:hover {
+    border-bottom: 2px solid $inputBorderFocus;
+    background-color: transparent;
+  }
+}
 .kidsList {
   width: 100%;
   @extend%aligncenter;
@@ -49,7 +64,7 @@
   }
   img {
     width: 100%;
-    height: 235px;
+    height: 250px;
     object-fit: cover;
     object-position: top;
     border-radius: 8px;
