--- a/src/components/main/ourKids/OurKids.module.scss
+++ b/src/components/main/ourKids/OurKids.module.scss
@@ -4,21 +4,43 @@
   scroll-margin: 130px;
 }
 
-.searchInput {
-  width: 65%;
-  height: 50px;
-  padding: 5px;
-  color: $textPurple;
-  font-family: inherit;
-  font-size: 18px;
-  border: 0;
-  border-bottom: 2px solid $inputBorder;
-  &:focus,
-  &:hover {
-    border-bottom: 2px solid $inputBorderFocus;
-    background-color: transparent;
+.searchWrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  label {
+    width: 297px;
+    display: flex;
+    align-items: center;
+
+    border-bottom: 2px solid $inputBorder;
+    &:focus,
+    &:hover {
+      border-bottom: 2px solid $inputBorderFocus;
+      background-color: transparent;
+      svg {
+        display: none;
+      }
+    }
+    svg {
+      fill: $inputBorder;
+    }
+  }
+
+  .searchInput {
+    width: 100%;
+    height: 50px;
+    padding: 5px;
+    color: $textPurple;
+    font-family: inherit;
+    font-size: 18px;
+    border: 0;
   }
 }
+
 .kidsList {
   width: 100%;
   @extend%aligncenter;
