--- a/src/pages/galleryPage/GalleryPage.module.scss
+++ b/src/pages/galleryPage/GalleryPage.module.scss
@@ -14,6 +14,7 @@
   .imageGridItem {
     display: block;
     background-color: peachpuff;
+    border-radius: 8px;
     img {
       display: flex;
       width: 100%;
