feat(study  page): add markup and styles to study page

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 $accent: #710a85;
 
+$bodyBG: #ffe7c0;
 $headerBG: #9c29b2;
 $footerBG: #9c29b2;
 $kidsBG: #fff0e5;
@@ -12,6 +13,7 @@ $galleryGradient: linear-gradient(
   rgba(255, 231, 192, 1) 100%
 );
 $studyBG: #710a85;
+$studyPageBG:rgb(237 236 198 / 62%);;
 $SchedulCardBG: #e8cded;
 $schedulBG: #2e0336;
 $teachersBG: linear-gradient(180deg, #ffe7c0 10%, #e8cded 100%);
@@ -38,6 +40,5 @@ $swiperButtonsBGHover: fff;
 
 $inputBorder: #9c29b2;
 $inputBorderFocus: #ffc909;
-
 
 $activeButtonBorder: #ffc909;
